rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__two-particleemitters__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: ParticleEmitter
  class: ParticleEmitter
  properties:
    Acceleration:
      Vector3:
        - 0
        - 0
        - 0
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 1
              - 1
          - time: 1
            color:
              - 1
              - 1
              - 1
    Drag:
      Float32: 0
    EmissionDirection:
      Enum: 1
    Enabled:
      Bool: true
    Lifetime:
      NumberRange:
        - -20.2
        - 10.1
    LightEmission:
      Float32: 0
    LightInfluence:
      Float32: 1
    LockedToPart:
      Bool: false
    Rate:
      Float32: 2
    RotSpeed:
      NumberRange:
        - 45
        - 46
    Rotation:
      NumberRange:
        - -6.66
        - 6.66
    Size:
      NumberSequence:
        keypoints:
          - time: 0
            value: 1
            envelope: 0
          - time: 0.080367394
            value: 0.56249976
            envelope: 0
          - time: 0.12169919
            value: 1.9374996
            envelope: 0
          - time: 0.1435132
            value: 3.75
            envelope: 0
          - time: 1
            value: 1
            envelope: 0
    SourceAssetId:
      Int64: -1
    Speed:
      NumberRange:
        - 2
        - 5
    SpreadAngle:
      Vector2:
        - 0
        - 0
    Tags:
      Tags: []
    Texture:
      ContentId: "rbxasset://textures/particles/sparkles_main.dds"
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0
            envelope: 0
          - time: 1
            value: 0
            envelope: 0
    VelocityInheritance:
      Float32: 0
    ZOffset:
      Float32: 0
  children: []
- referent: referent-1
  name: ParticleEmitter
  class: ParticleEmitter
  properties:
    Acceleration:
      Vector3:
        - 0
        - 0
        - 0
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 1
              - 1
          - time: 1
            color:
              - 1
              - 1
              - 1
    Drag:
      Float32: 0
    EmissionDirection:
      Enum: 1
    Enabled:
      Bool: true
    Lifetime:
      NumberRange:
        - -20.2
        - 10.1
    LightEmission:
      Float32: 0
    LightInfluence:
      Float32: 1
    LockedToPart:
      Bool: false
    Rate:
      Float32: 2
    RotSpeed:
      NumberRange:
        - 45
        - 46
    Rotation:
      NumberRange:
        - -6.66
        - 6.66
    Size:
      NumberSequence:
        keypoints:
          - time: 0
            value: 1
            envelope: 0
          - time: 0.080367394
            value: 0.56249976
            envelope: 0
          - time: 0.12169919
            value: 1.9374996
            envelope: 0
          - time: 0.1435132
            value: 3.75
            envelope: 0
          - time: 1
            value: 1
            envelope: 0
    SourceAssetId:
      Int64: -1
    Speed:
      NumberRange:
        - 2
        - 5
    SpreadAngle:
      Vector2:
        - 0
        - 0
    Tags:
      Tags: []
    Texture:
      ContentId: "rbxasset://textures/particles/sparkles_main.dds"
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0
            envelope: 0
          - time: 1
            value: 0
            envelope: 0
    VelocityInheritance:
      Float32: 0
    ZOffset:
      Float32: 0
  children: []
