rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__two-particleemitters__input.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 2
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: ParticleEmitter
      object_format: 0
      referents:
        - 0
        - 1
  - Prop:
      type_id: 0
      prop_name: Acceleration
      prop_type: Vector3
      values:
        - - 0
          - 0
          - 0
        - - 0
          - 0
          - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Color
      prop_type: ColorSequence
      values:
        - keypoints:
            - time: 0
              color:
                - 1
                - 1
                - 1
            - time: 1
              color:
                - 1
                - 1
                - 1
        - keypoints:
            - time: 0
              color:
                - 1
                - 1
                - 1
            - time: 1
              color:
                - 1
                - 1
                - 1
  - Prop:
      type_id: 0
      prop_name: Drag
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: EmissionDirection
      prop_type: Enum
      values:
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: Enabled
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: Lifetime
      prop_type: NumberRange
      values:
        - - -20.2
          - 10.1
        - - -20.2
          - 10.1
  - Prop:
      type_id: 0
      prop_name: LightEmission
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: LightInfluence
      prop_type: Float32
      values:
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: LockedToPart
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - ParticleEmitter
        - ParticleEmitter
  - Prop:
      type_id: 0
      prop_name: Rate
      prop_type: Float32
      values:
        - 2
        - 2
  - Prop:
      type_id: 0
      prop_name: RotSpeed
      prop_type: NumberRange
      values:
        - - 45
          - 46
        - - 45
          - 46
  - Prop:
      type_id: 0
      prop_name: Rotation
      prop_type: NumberRange
      values:
        - - -6.66
          - 6.66
        - - -6.66
          - 6.66
  - Prop:
      type_id: 0
      prop_name: Size
      prop_type: NumberSequence
      values:
        - keypoints:
            - time: 0
              value: 1
              envelope: 0
            - time: 0.080367394
              value: 0.56249976
              envelope: 0
            - time: 0.12169919
              value: 1.9374996
              envelope: 0
            - time: 0.1435132
              value: 3.75
              envelope: 0
            - time: 1
              value: 1
              envelope: 0
        - keypoints:
            - time: 0
              value: 1
              envelope: 0
            - time: 0.080367394
              value: 0.56249976
              envelope: 0
            - time: 0.12169919
              value: 1.9374996
              envelope: 0
            - time: 0.1435132
              value: 3.75
              envelope: 0
            - time: 1
              value: 1
              envelope: 0
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Speed
      prop_type: NumberRange
      values:
        - - 2
          - 5
        - - 2
          - 5
  - Prop:
      type_id: 0
      prop_name: SpreadAngle
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Texture
      prop_type: String
      values:
        - "rbxasset://textures/particles/sparkles_main.dds"
        - "rbxasset://textures/particles/sparkles_main.dds"
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: NumberSequence
      values:
        - keypoints:
            - time: 0
              value: 0
              envelope: 0
            - time: 1
              value: 0
              envelope: 0
        - keypoints:
            - time: 0
              value: 0
              envelope: 0
            - time: 1
              value: 0
              envelope: 0
  - Prop:
      type_id: 0
      prop_name: VelocityInheritance
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: ZOffset
      prop_type: Float32
      values:
        - 0
        - 0
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
  - End
